#209257 cont'd - Invalid URL address in PHP sample TodoList

--- a/php.samples/samples_src/TodoList/layout/index.phtml
+++ b/php.samples/samples_src/TodoList/layout/index.phtml
@@ -110,7 +110,7 @@
         <!-- footer -->
         <div id="footer">
             <div class="indent">
-                <div class="fleft"><a href="http://blogs.sun.com/netbeansphp/">NetBeans PHP team</a>, 2011 &copy; Copyright Oracle corp., All rights reserved</div>
+                <div class="fleft"><a href="https://blogs.oracle.com/netbeansphp/">NetBeans PHP team</a>, 2011 &copy; Copyright Oracle corp., All rights reserved</div>
             </div>
         </div>
     </div>
