--- a/websvc.rest/src/org/netbeans/modules/websvc/rest/wizard/ContainerItemSetupPanelVisual.form
+++ b/websvc.rest/src/org/netbeans/modules/websvc/rest/wizard/ContainerItemSetupPanelVisual.form
@@ -1,6 +1,11 @@
-<?xml version="1.1" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.3" maxVersion="1.3" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
+  <Properties>
+    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+      <Dimension value="[450, 312]"/>
+    </Property>
+  </Properties>
   <AccessibilityProperties>
     <Property name="AccessibleContext.accessibleName" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
       <ResourceString bundle="org/netbeans/modules/websvc/rest/wizard/Bundle.properties" key="LBL_Specify_Resource_Class" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
@@ -24,15 +29,7 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
-              <Component id="containerUriLabel" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="585" max="32767" attributes="0"/>
-          </Group>
-          <Group type="102" alignment="0" attributes="0">
-              <Component id="mediaTypeLabel" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="604" max="32767" attributes="0"/>
-          </Group>
-          <Component id="jSeparator1" alignment="0" pref="661" max="32767" attributes="1"/>
+          <Component id="jSeparator1" alignment="0" pref="454" max="32767" attributes="1"/>
           <Group type="102" alignment="0" attributes="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="classLabel" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -44,12 +41,12 @@
               </Group>
               <EmptySpace min="-2" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="packageComboBox" alignment="0" pref="548" max="32767" attributes="1"/>
-                  <Component id="resourceNameTextField" alignment="0" pref="548" max="32767" attributes="1"/>
-                  <Component id="classTextField" alignment="0" pref="548" max="32767" attributes="1"/>
-                  <Component id="projectTextField" alignment="0" pref="548" max="32767" attributes="1"/>
-                  <Component id="locationComboBox" alignment="0" pref="548" max="32767" attributes="1"/>
-                  <Component id="containerTextField" alignment="1" pref="548" max="32767" attributes="1"/>
+                  <Component id="packageComboBox" alignment="0" pref="341" max="32767" attributes="1"/>
+                  <Component id="resourceNameTextField" alignment="0" pref="341" max="32767" attributes="1"/>
+                  <Component id="classTextField" alignment="0" pref="341" max="32767" attributes="1"/>
+                  <Component id="projectTextField" alignment="0" pref="341" max="32767" attributes="1"/>
+                  <Component id="locationComboBox" alignment="0" pref="341" max="32767" attributes="1"/>
+                  <Component id="containerTextField" alignment="1" pref="341" max="32767" attributes="1"/>
               </Group>
           </Group>
           <Group type="102" alignment="1" attributes="0">
@@ -60,17 +57,24 @@
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
-                  <Component id="uriTextField" alignment="0" pref="422" max="32767" attributes="1"/>
-                  <Component id="representationClassTextField" alignment="0" pref="422" max="32767" attributes="0"/>
-                  <Component id="containerRepresentationClassTextField" alignment="0" pref="422" max="32767" attributes="1"/>
-                  <Component id="containerUriTextField" alignment="0" pref="422" max="32767" attributes="1"/>
-                  <Component id="medaTypeComboBox" alignment="0" pref="422" max="32767" attributes="1"/>
+                  <Component id="uriTextField" alignment="0" pref="215" max="32767" attributes="1"/>
+                  <Component id="representationClassTextField" alignment="0" pref="215" max="32767" attributes="0"/>
+                  <Component id="containerRepresentationClassTextField" alignment="0" pref="215" max="32767" attributes="1"/>
+                  <Component id="containerUriTextField" alignment="0" pref="215" max="32767" attributes="1"/>
+                  <Component id="medaTypeComboBox" alignment="0" pref="215" max="32767" attributes="1"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" max="-2" attributes="0">
                   <Component id="selectClassButton" min="-2" max="-2" attributes="1"/>
                   <Component id="selectClassButton1" alignment="1" min="-2" max="-2" attributes="1"/>
               </Group>
+          </Group>
+          <Group type="102" attributes="0">
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="containerUriLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="mediaTypeLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
