--- a/apisupport.wizards/src/org/netbeans/modules/apisupport/project/ui/wizard/javahint/JavaHintDataPanel.form
+++ b/apisupport.wizards/src/org/netbeans/modules/apisupport/project/ui/wizard/javahint/JavaHintDataPanel.form
@@ -93,6 +93,7 @@
             <Property name="columns" type="int" value="20"/>
             <Property name="lineWrap" type="boolean" value="true"/>
             <Property name="rows" type="int" value="5"/>
+            <Property name="wrapStyleWord" type="boolean" value="true"/>
           </Properties>
         </Component>
       </SubComponents>
