--- a/php.doctrine2/src/org/netbeans/modules/php/doctrine2/ui/options/Doctrine2OptionsPanel.form
+++ b/php.doctrine2/src/org/netbeans/modules/php/doctrine2/ui/options/Doctrine2OptionsPanel.form
@@ -120,9 +120,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="errorLabel">
       <Properties>
-        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="org/netbeans/modules/php/doctrine2/ui/options/Bundle.properties" key="Doctrine2OptionsPanel.errorLabel.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
-        </Property>
+        <Property name="text" type="java.lang.String" value="ERROR" noResource="true"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="installationInstructionsLabel">
