--- a/php.symfony2/src/org/netbeans/modules/php/symfony2/ui/options/Symfony2OptionsPanel.form
+++ b/php.symfony2/src/org/netbeans/modules/php/symfony2/ui/options/Symfony2OptionsPanel.form
@@ -107,9 +107,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="errorLabel">
       <Properties>
-        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="org/netbeans/modules/php/symfony2/ui/options/Bundle.properties" key="Symfony2OptionsPanel.errorLabel.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
-        </Property>
+        <Property name="text" type="java.lang.String" value="ERROR" noResource="true"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="noteLabel">
