Translatability issues in samples

--- a/websvc.rest.samples/src/org/netbeans/modules/websvc/rest/samples/ui/RestRCPMvnAppSamplePanelVisual.form
+++ b/websvc.rest.samples/src/org/netbeans/modules/websvc/rest/samples/ui/RestRCPMvnAppSamplePanelVisual.form
@@ -95,9 +95,7 @@
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
           <ResourceString bundle="org/netbeans/modules/websvc/rest/samples/ui/Bundle.properties" key="RestRCPMvnAppSamplePanelVisual.browseButton.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
         </Property>
-        <Property name="actionCommand" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="org/netbeans/modules/websvc/rest/samples/ui/Bundle.properties" key="RestRCPMvnAppSamplePanelVisual.browseButton.actionCommand" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
-        </Property>
+        <Property name="actionCommand" type="java.lang.String" value="BROWSE"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="browseButtonActionPerformed"/>
